--- a/0.9
+++ b/0.9
@@ -179,7 +179,7 @@ def PoF():
 			def gg(): (hand / 2) / int(huslas)
 				if huslas == [1, 9]:
 					print "If you have less than %gg() big blinds you should PUSH!"
-				elif huslas = 0:
+				elif huslas == 0:
 					huslas = 1
 					print "If you have less than %gg() big blinds you should PUSH!"
 				else print "Woops, you have minimum 1 opponent, 9 maximum, try again please!"
